# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  UPDATES.md  catalog.json  docker-compose.yml
.claude/: settings.local.json
.claude/skills/cerebras/: SKILL.md
.github/workflows/: ci.yml
backend/: database.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/models/: auth.py  chat.py  doc_chat.py  documents.py  nda.py
backend/routers/: auth.py  catalog.py  chat.py  doc_chat.py  documents.py  generate.py
backend/services/: auth.py  chat.py  doc_chat.py  doc_renderer.py  pdf.py  renderer.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_chat.py  test_doc_chat.py  test_doc_renderer.py  test_documents.py  test_models.py  test_pdf.py  test_renderer.py
docs/: manual-tests.md
docs/bugs/: nda-preview.md
docs/superpowers/plans/: 2026-03-18-comprehensive-testing.md
docs/superpowers/specs/: 2026-03-18-testing-strategy-design.md
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/e2e/: happy-path.spec.ts  helpers.ts  navigation.spec.ts  preview.spec.ts  validation.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MyDocuments.tsx  NavBar.tsx
frontend/src/hooks/: useTemplateRenderer.ts
frontend/src/lib/: apiClient.ts  auth.ts  chatApi.ts  disclaimer.ts  docChatApi.ts  documentsApi.ts  genericRenderer.ts  (+2 more)
scripts/: start-linux.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt
(+28 files in other folders)
