[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic[email]>=2.7.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "markdown>=3.6",
    "litellm>=1.82.6",
    "bcrypt>=5.0.0",
    "playwright>=1.52.0",
    "fpdf2>=2.8.7",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<2",
    "httpx>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
